Fix the alignment

--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ header {
 
 header h1 {
   display: inline-block;
+  text-align: center;
 }
 
 nav li {
@@ -35,6 +36,8 @@ nav li {
 
 nav a {
   color: #0074d9;
+  padding: 1rem;
+  text-align: center;
   text-decoration: none;
 }
 
